Mon Jan 23 14:04:44 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.in: start developing 0.65 version

Wed Jan 11 10:42:16 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: add parameters

Tue Jan 10 15:00:18 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS: updated

Mon Jan 09 14:25:09 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* win32/setup.rc: two controls was overlapped

Mon Jan 09 11:15:56 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: set state correctly if not available

Sat Jan 07 12:24:57 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/mem.c:
	- fix memory leak
	- remove warning

Fri Jan 06 11:24:22 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- fix problem with dummy parameters (ie from WRITETEXT)

Fri Jan 06 11:23:50 CET 2006	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fix some behavior using odbc 3 and raiserror
	* src/odbc/unittests/array.c src/odbc/unittests/raiserror.c:
	- relax a bit
	* src/odbc/odbc_util.c: cleanup, comment

Fri Dec 30 13:30:28 EST 2005	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/faq.html HTML cleanup

Thu Dec 29 11:23:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* vms/config_h.vms vms/configure.com vms/descrip_mms.template:
	* vms/getpass.c:
	- applied Craig A. Berry patch for VMS

Fri Dec 23 15:15:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: prevent possible core with bad reply

Wed Dec 21 15:01:29 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am src/replacements/Makefile.am:
	- fix distribution of replacement.h
	* src/tds/util.c: fix problem for some old compiler

Wed Dec 21 09:13:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/locale.c: parse LANG environment

Wed Dec 21 09:11:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h src/ctlib/ct.c: